--- a/jquery.highlighttextarea.css
+++ b/jquery.highlighttextarea.css
@@ -35,6 +35,7 @@
   padding:0;
   opacity: 0;
   transition: opacity 0.2s;
+  z-index: 1;
 }
 .highlightTextarea mark.fade {
   line-height:inherit;
