--- a/jquery.highlighttextarea.css
+++ b/jquery.highlighttextarea.css
@@ -32,7 +32,7 @@
   line-height:inherit;
   color:transparent;
   margin:0;
-  padding:0;
+  padding: 1px 1px 1px 0; /*0;*/
   opacity: 0;
   transition: opacity 0.2s;
   position: relative;
